# ai-gateway

./: .gitignore  .gitmodules  Cargo.toml  Makefile
crates/: AGENTS.md
crates/gateway/: AGENTS.md  Cargo.toml
crates/gateway/src/: main.rs
crates/gateway/src/gateway/: mod.rs
crates/gateway/src/provider/: mod.rs
crates/gateway/tests/: e2e.rs
docs/: 核心功能.md  需求.md
docs/design/: Request.md  workflow.drawio
docs/superpowers/specs/: 2026-07-08-native-protocol-gateway-design.md
