[workspace]
members = [
    "crates/openai-api-gen",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
